--- a/TimeUtil.components/TimeUntilCalculator/TimeUntilCalculatorView.razor
+++ b/TimeUtil.components/TimeUntilCalculator/TimeUntilCalculatorView.razor
@@ -3,12 +3,20 @@
 <StyledText HtmlTag="h1" Typo="Typo.h6">
     Time Utilisation Calculator
 </StyledText>
-<MudStack Row="true">
-    <MonthRangePicker @bind-MonthRange="MonthRange" StartDate="Calendar.FirstEventDate" EndDate="Calendar.LastEventDate" />
-    <CategoryMultiSelect @bind-SelectedCategories="SelectedCategories" Categories="Calendar.Categories" HelpText="Select categoires to be included in the calculation" />
-    <MudNumericField @bind-Value="TargetHours" Label="Target Hours per month" Format="F2" Variant="Variant.Text" Min="0" />
-    <MudField Adornment="Adornment.End" AdornmentIcon="@Icons.Filled.Percent" Label="Time Utilisation">@Math.Round(OutlookCalendar.TimeUtilisationPercentage(_targetHours * GetNumMonths(), _events), 2)</MudField>
-</MudStack>
+<MudGrid Spacing="2">
+    <MudItem xs="12" sm="6" lg="4">
+        <MonthRangePicker @bind-MonthRange="MonthRange" StartDate="Calendar.FirstEventDate" EndDate="Calendar.LastEventDate" />
+    </MudItem>
+    <MudItem xs="12" sm="6" lg="4">
+        <CategoryMultiSelect @bind-SelectedCategories="SelectedCategories" Categories="Calendar.Categories" HelpText="Select categoires to be included in the calculation" />
+    </MudItem>
+    <MudItem xs="12" sm="6" lg="2">
+        <MudNumericField @bind-Value="TargetHours" Label="Target Hours per month" Format="F2" Variant="Variant.Text" Min="0" />
+    </MudItem>
+    <MudItem xs="12" sm="6" lg="2">
+        <MudField Adornment="Adornment.End" AdornmentIcon="@Icons.Filled.Percent" Label="Time Utilisation">@Math.Round(OutlookCalendar.TimeUtilisationPercentage(_targetHours * GetNumMonths(), _events), 2)</MudField>
+    </MudItem>
+</MudGrid>
 
 @code {
     [Parameter, EditorRequired] public OutlookCalendar Calendar { get; set; } = default!;
