--- a/TimeUtil.components/Shared/CategoryMultiSelect.razor
+++ b/TimeUtil.components/Shared/CategoryMultiSelect.razor
@@ -5,7 +5,10 @@
            SelectedValues="SelectedCategories"
            SelectedValuesChanged="SelectedCategoriesChanged"
            AdornmentIcon="@Icons.Material.Filled.Search"
-           HelperText="@HelpText">
+           HelperText="@HelpText"
+           SelectAllText="@SelectAllText"
+           Text="@GetMultiSelectionText()"
+>
     @foreach (string category in Categories)
     {
         <MudSelectItem @key="category" T="string" Value="@category">@category</MudSelectItem>
@@ -17,5 +20,17 @@
     [Parameter] public IEnumerable<string>? SelectedCategories { get; set; }
     [Parameter] public EventCallback<IEnumerable<string>?> SelectedCategoriesChanged { get; set; }
     [Parameter] public string? HelpText { get; set; }
+    [Parameter] public string? SelectAllText { get; set; } = "Select all";
+
+
+    private string? GetMultiSelectionText()
+    {
+        int count = SelectedCategories?.Count() ?? 0;
+        if(count == 0)
+        {
+            return null;
+        }
+        return $"{count} categor{(count > 1 ? "ies have" : "y has")} been selected";
+    }
 
 }
