--- a/TimeUtil.components/Shared/InputForm.razor
+++ b/TimeUtil.components/Shared/InputForm.razor
@@ -5,7 +5,7 @@
     <StyledText HtmlTag="p" Typo="Typo.subtitle1">
         @if (file is null)
         {
-            <text>Upload an Outloock Calender CSV</text>
+            <text>Upload an Outlook Calender CSV</text>
             <MudButton HtmlTag="label"
                    Variant="Variant.Filled"
                    Color="Color.Secondary"
