--- a/TimeUtil.components/_Imports.razor
+++ b/TimeUtil.components/_Imports.razor
@@ -3,4 +3,5 @@
 @using TimeUtil.Components.Shared
 @using TimeUtil.Components.EventsTable
 @using TimeUtil.Components.Types
-@using TimeUtil.Components.Extensions;
+@using TimeUtil.Components.Extensions
+@using TimeUtil.Components.Helpers
