--- a/TimeUtil.components/EventsTable/EventsTable.razor
+++ b/TimeUtil.components/EventsTable/EventsTable.razor
@@ -105,7 +105,6 @@
 
     private Event[] _events = default!;
     private static readonly int[] pageSizeOptions = new[] { 20, 40, 60, 80, 100 };
-    private static readonly DialogOptions dialogOptions = new() { MaxWidth = MaxWidth.Medium, FullWidth = true, DisableBackdropClick = true };
     private int _pageSize = pageSizeOptions[0];
     private int _numberOfPages;
 
@@ -160,7 +159,7 @@
             { nameof(EditEventDialog.Categories), Categories }
         };
 
-        var reference = DialogService.Show<EditEventDialog>("Simple Dialog", parameters, dialogOptions);
+        var reference = DialogService.Show<EditEventDialog>("Simple Dialog", parameters);
 
         var res = await reference.Result;
 
