--- a/TimeUtil.components/Pages/Index.razor
+++ b/TimeUtil.components/Pages/Index.razor
@@ -40,9 +40,9 @@
         else if (cal is not null)
         {
             <MudStack Spacing="6">
-                <MudPaper Class="pa-3">
+              @*  <MudPaper Class="pa-3">
                     <TimeUntilCalculatorView Calendar="cal" />
-                </MudPaper>
+                </MudPaper>*@
                 <div>
                     <DataOutputView Calendar="@cal" />
                 </div>
